--- a/src/app/shared/components/modal-handle-options-car/modal-handle-options-car.component.html
+++ b/src/app/shared/components/modal-handle-options-car/modal-handle-options-car.component.html
@@ -51,7 +51,7 @@
           "
           class="error_text"
         >
-          Por favor, introduce una patente válida, debe tener 2 numeros
+          La patente debe tener 2 números al final
         </div>
       </section>
 
@@ -212,7 +212,7 @@
           "
           class="error_text"
         >
-          Por favor, introduce una precio
+          Por favor, introduce un precio
         </div>
         <div
           *ngIf="
@@ -222,7 +222,7 @@
           "
           class="error_text"
         >
-          Por favor, introduce una precio válido
+          Por favor, introduce un precio válido
         </div>
       </section>
 
