ADD: Implementacion de fix que no permitia compilar el proyecto

--- a/src/app/shared/components/modal-handle-options-car/modal-handle-options-car.component.scss
+++ b/src/app/shared/components/modal-handle-options-car/modal-handle-options-car.component.scss
@@ -1,5 +1,5 @@
-@import "../../../theme/variables";
-@import "../../../theme/global";
+@import "src/theme/variables";
+@import "src/theme/global";
 
 .modal_create {
   width: 100%;
