--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -1,5 +1,5 @@
-@import "../../../theme/_variables";
-@import "../../../theme/_global";
+@import "src/theme/_variables";
+@import "src/theme/_global";
 
 .landing {
   position: relative;
